# montrealfirepredicition

./: .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
conf/base/: catalog.yml  catalog_globals.yml  comments.txt  parameters_data_processing.yml  parameters_data_science.yml  parameters_feature_engineering.yml
notebooks/: census_analysis.ipynb  create_data_table.ipynb  firestations_exploration.ipynb  incidents_exploration.ipynb  load_census.ipynb  mesh_analysis.ipynb  mesh_incidents_analysis.ipynb  modeling.ipynb  property assessment exploaration.ipynb  results.ipynb  spatial_analysis.ipynb  spatial_analysis_v2.ipynb  spatial_analysis_v3.ipynb  table_analysis.ipynb  temporal_analysis.ipynb  time_series_model.ipynb
src/montrealfirepredicition/: __init__.py  __main__.py
src/montrealfirepredicition/pipelines/data_processing/: nodes.py  pipeline.py
src/montrealfirepredicition/pipelines/data_science/: nodes.py  pipeline.py
src/montrealfirepredicition/pipelines/feature_engineering/: nodes.py  pipeline.py
