[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "montrealfirepredicition"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
montrealfirepredicition = "montrealfirepredicition.__main__:main"

[tool.kedro]
package_name = "montrealfirepredicition"
project_name = "montrealfirepredicition"
kedro_init_version = "0.19.6"
tools = [ "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "montrealfirepredicition.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
